// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`warningsFilter option should match snapshot for a "function" value and the "sourceMap" option is "false" (filter by message): assets 1`] = `
Object {
  "one.js": "",
  "two.js": "",
}
`;

exports[`warningsFilter option should match snapshot for a "function" value and the "sourceMap" option is "false" (filter by message): errors 1`] = `Array []`;

exports[`warningsFilter option should match snapshot for a "function" value and the "sourceMap" option is "false" (filter by message): warnings 1`] = `
Array [
  "Terser Plugin: Dropping unreachable code [one.js:2,41]",
  "Terser Plugin: Dropping unreachable code [two.js:2,41]",
]
`;

exports[`warningsFilter option should match snapshot for a "function" value and the "sourceMap" option is "true" (filter by file): assets 1`] = `
Object {
  "one.js": "",
  "two.js": "",
}
`;

exports[`warningsFilter option should match snapshot for a "function" value and the "sourceMap" option is "true" (filter by file): errors 1`] = `Array []`;

exports[`warningsFilter option should match snapshot for a "function" value and the "sourceMap" option is "true" (filter by file): warnings 1`] = `
Array [
  "Terser Plugin: Dropping unreachable code [webpack://./test/fixtures/unreachable-code-2.js:1,40]",
  "Terser Plugin: Dropping unused function foo [webpack://./test/fixtures/unreachable-code-2.js:1,0]",
  "Terser Plugin: Dropping side-effect-free statement [two.js:1,9]",
]
`;

exports[`warningsFilter option should match snapshot for a "function" value and the "sourceMap" option is "true" (filter by message): assets 1`] = `
Object {
  "one.js": "",
  "two.js": "",
}
`;

exports[`warningsFilter option should match snapshot for a "function" value and the "sourceMap" option is "true" (filter by message): errors 1`] = `Array []`;

exports[`warningsFilter option should match snapshot for a "function" value and the "sourceMap" option is "true" (filter by message): warnings 1`] = `
Array [
  "Terser Plugin: Dropping unreachable code [webpack://./test/fixtures/unreachable-code.js:1,40]",
  "Terser Plugin: Dropping unreachable code [webpack://./test/fixtures/unreachable-code-2.js:1,40]",
]
`;

exports[`warningsFilter option should match snapshot for a "function" value and the "sourceMap" value is "true" (filter by source): assets 1`] = `
Object {
  "one.js": "",
  "two.js": "",
}
`;

exports[`warningsFilter option should match snapshot for a "function" value and the "sourceMap" value is "true" (filter by source): errors 1`] = `Array []`;

exports[`warningsFilter option should match snapshot for a "function" value and the "sourceMap" value is "true" (filter by source): warnings 1`] = `
Array [
  "Terser Plugin: Dropping unreachable code [webpack://./test/fixtures/unreachable-code.js:1,40]",
  "Terser Plugin: Dropping unused function foo [webpack://./test/fixtures/unreachable-code.js:1,0]",
]
`;

exports[`warningsFilter option should match snapshot for an empty "function" value: assets 1`] = `
Object {
  "one.js": "",
  "two.js": "",
}
`;

exports[`warningsFilter option should match snapshot for an empty "function" value: errors 1`] = `Array []`;

exports[`warningsFilter option should match snapshot for an empty "function" value: warnings 1`] = `Array []`;
